 - GBA: Fix BIOS check on big endian
 - Libretro: Fix a memory leak with the render buffer
 - GBA Audio: Fix 8-bit writes to audio channel 3 and 4 registers
 - GBA Audio: Fix audio channels being silenced at the wrong time
 - VFS: Fix return values of VFileFILE.read and .write
 - Util: Fix PowerPC PNG read/write pixel order
 - GBA Video: Fix edge case with sprite blend modes and semitransparency
Misc:
 - Qt: Window size command line options are now supported
 - Qt: Increase usability of key mapper
 - GBA Memory: Use a dynamically sized mask for ROM memory
 - Qt: Remove useless help icons in dialogs
 - ARM7: Combine shifter-immediate and shifter-register functions to reduce binary size
 - SDL: Support fullscreen in SDL 1.2
 - GBA: Attempting to save a screenshot-style savestate should be allowed without libpng
 - GBA: Better memory handling with PNG savestates
 - GBA Audio: Allow GBAAVStream to have no video callback
 - ARM7: Force disable LTO on two files to work around a GCC bug
 - Libretro: Use anonymous memory mappers for large blocks of memory
 - Qt: Add 'Apply' button to settings window
 - Qt: Prevent savestate window from opening while in multiplayer
 - Qt: Disable menu items in multiplayer that don't make sense to have enabled
 - Qt: Dropping multiplayer windows works more cleanly now
 - GBA BIOS: Implement RegisterRamReset for SIO registers

0.3.0: (2015-08-16)
Features:
 - Ability to hide individual background layers, or OBJs
 - Ability to mute individual audio channels
 - Palette viewer and exporter
 - Volume control
 - More shortcuts are editable (e.g. quick save/load)
 - Rewind now shows the frame after rewinding
 - Import/Export of GameShark/Action Replay snapshots
 - Add "Step backwards" item for single increment rewind
 - Deadzone estimation for game controllers
 - Analog inputs can be used for shortcuts
 - Menu items for specific solar sensor brightness levels
 - Remappable controls for tilt and gyroscope sensors